# scibs

./: .gitignore  package.json
client/: .gitignore  angular.json  package.json
client/src/: index.html
client/src/app/: app.component.ts  app.module.ts  partidas.service.ts
client/src/environments/: environment.prod.ts
reports/: pyproject.toml
reports/reports/: __init__.py  models.py  queries.py  xlsx.py
server/: .dev.env  .env  .gitignore  database.sqlite  loading.html  package.json  prebuild.sh
server/assets/icons/mac/: icon.icns
server/reports/: pyproject.toml
server/reports/reports/: __init__.py  db.py  models.py
server/src/: app.module.ts  database.module.ts  electron.ts  main.ts
server/src/auth/: auth.service.ts  jwt.strategy.ts  local.strategy.ts  user.model.ts
server/src/comprobantes-entradas/: comprobante-entradas.entity.ts  comprobantes-entradas.controller.spec.ts  comprobantes-entradas.controller.ts  comprobantes-entradas.service.spec.ts  comprobantes-entradas.service.ts
server/src/comprobantes-salidas/: comprobante-salidas.entity.ts  comprobantes-salidas.controller.spec.ts  comprobantes-salidas.controller.ts  comprobantes-salidas.module.ts  comprobantes-salidas.service.ts
server/src/entradas/: entrada.entity.ts  entradas.controller.ts  entradas.module.ts  entradas.service.ts
server/src/gestiones/: gestiones.controller.ts
server/src/lote/: lote.entity.ts  lote.module.ts
server/src/materiales/: materiales.module.ts  materiales.service.ts
server/src/movimientos/: movimiento.entity.ts  movimientos.module.ts  movimientos.service.ts
(+163 files in other folders)
